--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -335,7 +335,8 @@ jobs:
         net/qBittorrent-static net/phtunnel net/headscale net/baidupcs-go net/daemonlogger net/geth net/gnurl \
         net/uugamebooster net/pgyvpn ‎net/ooniprobe net/quassel-irssi net/polipo net/rosy-file-server \
         net/rsyslog net/simple-adblock net/snort net/sqm-scripts-extra net/tor-fw-helper net/vncrepeater \
-        net/vpnbypass net/vpn-policy-routing sound/forked-daapd
+        net/vpnbypass net/vpn-policy-routing sound/forked-daapd utils/audit utils/bandwidthd utils/flent-tools \
+        utils/qfirehose utils/slirp4netns utils/tintin
         ) &
         (
         git_sparse_clone openwrt-24.10 "https://github.com/openwrt/packages" \
@@ -360,7 +361,7 @@ jobs:
         libs/wxbase libs/rapidjson libs/libcron libs/quickjspp libs/toml11 \
         libs/libdouble-conversion libs/qt6base libs/cxxopts libs/jpcre2 libs/alac libs/libcryptopp \
         utils/qt6tools utils/sms-tool utils/cpulimit utils/sendat utils/filebrowser utils/cups utils/cups-bjnp \
-        utils/phicomm-k3screenctrl utils/joker \
+        utils/phicomm-k3screenctrl utils/joker utils/7z utils/dhrystone utils/supervisor utils/tinymembench \
         multimedia/you-get multimedia/lux multimedia/gmediarender multimedia/ykdl multimedia/gallery-dl sound/spotifyd devel/go-rice admin/gotop
         ) &
         (
