--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -333,8 +333,8 @@ jobs:
         git_sparse_clone master "https://github.com/coolsnowwolf/packages" multimedia/UnblockNeteaseMusic-Go \
         multimedia/UnblockNeteaseMusic net/antileech net/go-aliyundrive-webdav net/gowebdav net/kismet net/mstpd \
         net/qBittorrent-static net/phtunnel net/headscale net/baidupcs-go net/daemonlogger net/geth net/gnurl \
-        net/uugamebooster net/pgyvpn ‎net/ooniprobe net/quassel-irssi net/polipo net/rosy-file-server \
-        net/rsyslog net/simple-adblock net/snort net/sqm-scripts-extra net/tor-fw-helper net/vncrepeater \
+        net/uugamebooster net/pgyvpn ‎net/ooniprobe net/polipo net/rosy-file-server \
+        net/rsyslog net/sqm-scripts-extra net/tor-fw-helper net/vncrepeater \
         net/vpnbypass net/vpn-policy-routing sound/forked-daapd utils/audit utils/bandwidthd utils/flent-tools \
         utils/qfirehose utils/slirp4netns utils/tintin
         ) &
