--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -122,6 +122,7 @@ jobs:
         git_clone https://github.com/sirpdboy/netspeedtest && mv -n netspeedtest/luci-app-netspeedtest ./ ; rm -rf netspeedtest
         git_clone https://github.com/sirpdboy/luci-app-parentcontrol
         git_clone https://github.com/sirpdboy/luci-app-poweroffdevice
+        git_clone https://github.com/muink/openwrt-fastfetch
         # git_clone https://github.com/muink/luci-app-homeproxy
         ) &
         (
