--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -272,6 +272,7 @@ jobs:
         git_clone https://github.com/animegasan/luci-app-dnsleaktest
         git_clone https://github.com/animegasan/luci-app-gpioled
         git_clone https://github.com/hingbong/hickory-dns-openwrt && mvdir hickory-dns-openwrt
+        git_clone https://github.com/kiddin9/luci-app-zerotier
         ) &
         (
         git_clone https://github.com/EasyTier/luci-app-easytier
@@ -355,7 +356,7 @@ jobs:
 
         (
         git_sparse_clone openwrt-24.10 "https://github.com/immortalwrt/packages" net/mwol net/n2n net/dae \
-        net/sub-web net/amule net/haproxy net/cdnspeedtest net/zerotier net/minieap net/ddns-go net/sysuh3c \
+        net/sub-web net/amule net/haproxy net/cdnspeedtest net/minieap net/ddns-go net/sysuh3c \
         net/go-nats net/go-wol net/bitsrunlogin-go net/transfer net/daed net/udp2raw net/msd_lite net/netbird \
         net/subconverter net/ngrokc net/njitclient net/scutclient net/gost net/ua2f net/dufs net/qBittorrent-Enhanced-Edition \
         net/tinyportmapper net/tinyfecvpn net/nexttrace net/pcap-dnsproxy net/rustdesk-server net/tuic-server \
