--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -4,7 +4,7 @@
 # 
 # <https://github.com/kiddin9/openwrt-packages>
 #
-
+w
 name: Merge-upstream
 on:
   push:
@@ -341,7 +341,7 @@ jobs:
         net/qBittorrent-static net/phtunnel net/headscale net/baidupcs-go net/daemonlogger net/geth net/gnurl \
         net/uugamebooster net/pgyvpn ‎net/ooniprobe net/polipo net/rosy-file-server \
         net/rsyslog net/sqm-scripts-extra net/tor-fw-helper net/vncrepeater \
-        net/vpnbypass net/vpn-policy-routing sound/forked-daapd utils/flent-tools \
+        net/vpnbypass net/vpn-policy-routing utils/flent-tools \
         utils/qfirehose utils/slirp4netns
         ) &
         (
